[gd_scene load_steps=3 format=3 uid="uid://c4npmik3hfgii"]

[ext_resource type="PackedScene" uid="uid://eopcs5xfe16n" path="res://Scenes/OptionsMenu.tscn" id="1_exw3t"]
[ext_resource type="Script" path="res://Scripts/UI/PauseMenu.gd" id="1_mvq77"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_mvq77")

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuBody" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -137.0
offset_right = 91.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuBody"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuBody/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuBody/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenuBody/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="OptionsMenu" parent="PauseMenuBody/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_exw3t")]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="PauseMenuBody/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenuBody/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
